add official link to git book

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>Because the basics are important!</p>
     <p>
       Learn more about Git on
-      <a href="https://git-scm.com/book/en/v2">The official website
+      <a href="https://git-scm.com/book/en/v2">The official website</a>
     </p>
   </body>
 </html>
