--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <p>Because the basics are important!</p>
     <p>
       Learn more about Git on
-      <a href="https://git-scm.com/book/en/v2">The official website</a>
+      <a href="https://git-scm.com/book/en/v2">The official website</a> or
+      <a href="https://acad.link/git">our course</a>
     </p>
   </body>
 </html>
