--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <body>
     <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'">
     <h1>Git & GitHub Crash Course</h1>
-    <p>Because the basics are important!</p>
-    <p>
-      Learn more about Git on
-      <a href="https://git-scm.com/book/en/v2">The official website</a> or
-      <a href="https://acad.link/git">our course</a>
-    </p>
+    <section>
+      <p>Because the basics are important!</p>
+        <p>
+          Learn more about Git on
+          <a href="https://git-scm.com/book/en/v2">The official website</a> or
+          <a href="https://acad.link/git">our course</a>
+        </p>
+    </section>
   </body>
 </html>
