--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'">
     <h1>Git & GitHub Crash Course</h1>
     <section>
-      <p>Because the basics are very important!</p>
+      <p>Because the basics are very important!!!</p>
         <p>
           Learn more about Git on
           <a href="https://git-scm.com/book/en/v2">The official website</a> or]
