--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Because the basics are very important!!!</p>
         <p>
           Learn more about Git on
-          <a href="https://git-scm.com/book/en/v2">The official website</a> or]
+          <a href="https://git-scm.com/book/en/v2">The official website</a> or
           <a href="https://acad.link/git">our course</a>
       </p>
     </section>
